arc: Add default notification delegate for provisioning managed user.

TRANSIENT type of notification requires delegate be set

Test: manually
Bug: 816977
Change-Id: Iea568f3ffea943899be2d3c212a10dbb5f70fbf6
Reviewed-on: https://chromium-review.googlesource.com/939846
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@google.com>
Cr-Commit-Position: refs/heads/master@{#539527}
Former-commit-id: 1c4e5a6550ef849ed4b2118809f58d42ea3469d3